<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="应用控制">
        <Preference
            android:icon="@drawable/sdcard"
            android:key="@string/pref_clear_cache"
            android:title="清除缓存"/>
        <!--<CheckBoxPreference-->
            <!--android:key="@string/pref_reading_mode"-->
            <!--android:title="阅读模式"-->
            <!--android:defaultValue="true"/>-->
    </PreferenceCategory>
    <PreferenceCategory
        android:title="关于我们">
        <Preference
            android:icon="@drawable/mail"
            android:key="@string/pref_feedback"
            android:title="反馈问题"/>
        <Preference
            android:icon="@drawable/share_app"
            android:key="@string/pref_share"
            android:title="分享"/>
        <Preference
            android:icon="@drawable/author"
            android:key="@string/pref_author"
            android:title="作者"/>
        </PreferenceCategory>


</PreferenceScreen>